<resources>
    <string name="app_name">DroidTag</string>
    <string name="tv_shows_sample_activity_title">TV Shows</string>
    <string name="leftarrow"><![CDATA[<]]></string>
    <string name="rightarrow"><![CDATA[>]]></string>
    <string name="settings">Settings</string>
    <string name="modify_limits">Modify Limits</string>
    <string name="change_theme">Change Theme</string>
    <string name="export_as">Export As</string>
    <string name="sheet_m1">sheet1</string>
    <string name="share">share</string>
    <string name="title_activity_report_list">ReportListActivity</string>
    <string name="pending_loggers">Pending Loggers</string>
    <string name="alerted_loggers">Alerted Loggers</string>
    <string name="completed_loggers">Completed Loggers</string>
    <string name="all_device_loggers">All Device Loggers</string>
    <string name="ble_not_supported">Bluetooth is not supported in your phone</string>
    <string name="btn_sure">OK</string>
    <string name="btn_cancel">cancel</string>
    <string name="ask_permission">Permission Request</string>
    <string name="line_success">Connection Successful</string>
    <string name="line_disconnect">Connection Disconnected</string>
    <string name="linednum">No :</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="signUp">SignUp</string>
    <string name="fullName">Name</string>
    <string name="error_only_numeric_digits_allowed">Only numeric digits are allowed.</string>
    <string name="error_only_numeric_digits_range_allowed">Only numeric digits within the range %1$s - %2$s are allowed.</string>
    <string name="error_this_field_cannot_contain_special_character">This field cannot contain any special character</string>
    <string name="error_only_standard_letters_are_allowed">Only standard letters are allowed</string>
    <string name="error_field_must_not_be_empty">The field must not be empty</string>
    <string name="error_email_address_not_valid">Email address not valid</string>
    <string name="error_creditcard_number_not_valid">Credit card number is not valid</string>
    <string name="error_phone_not_valid">Phone number not valid</string>
    <string name="error_domain_not_valid">Domain name not valid</string>
    <string name="error_ip_not_valid">IP Address not valid</string>
    <string name="error_url_not_valid">Web Url is not valid</string>
    <string name="error_notvalid_personname">Not a valid first or last name.</string>
    <string name="error_notvalid_personfullname">Not a valid full name.</string>
    <string name="error_date_not_valid">Format not valid</string>
    <string name="editText_hint_alias"><font size="8dp" />Alias name</string>
    <string name="editText_hint_sourcecompany"><font size="8dp" />Entry Point:</string>
    <string name="editText_hint_sourcelocation"><font size="8dp" />location</string>
    <string name="editText_hint_destinationcompany"><font size="8dp" />Exit :</string>
    <string name="editText_hint_destinationlocation"><font size="8dp" />location</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="set_limits_humidity">Set Limits (Humidity)</string>
    <string name="place_details"><![CDATA[&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s]]></string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password is too short, enter  a minimum  of 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email id and password </string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member yet? Get registered now</string>
    <string name="btn_link_to_login">Already registered. Use Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot your password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send your password reset instructions.</string>

    <string name="title_activity_loading">Loading</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cancel">Cancel</string>

</resources>
