<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_grey"
    android:baselineAligned="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text=" Logger Configuration"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"

        android:textStyle="normal" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/alias_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/alias_name_et"
            style="@style/StyledTilEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:hint="@string/editText_hint_alias"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/source_company_name_it"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/source_company_name_et"
            style="@style/StyledTilEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:hint="@string/editText_hint_sourcecompany"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/source_location_it"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/location"
        android:orientation="horizontal"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/source_location_et"
            style="@style/StyledTilEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:hint="@string/editText_hint_sourcelocation"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/destination_company_name_it"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/destination_company_name_et"
            style="@style/StyledTilEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:hint="@string/editText_hint_destinationcompany"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/destination_location_it"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/destination_location_et"
            style="@style/StyledTilEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:hint="@string/editText_hint_destinationlocation"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton

        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|end"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_bluetooth_audio_24dp" />
</LinearLayout>
