<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:background="#0000"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=" Logger Setup"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:layout_marginBottom="24dp"

        android:textStyle="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/full_name"
        android:layout_width="fill_parent"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        >

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/logger_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            style="@style/StyledTilEditText"
            android:textColor="@color/colorPrimaryDark"
            android:hint="Logger Default*"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/alias_name"
        android:layout_width="fill_parent"
        android:drawableStart="@drawable/location"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/alias_name_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:hapticFeedbackEnabled="true"
            android:textColorHint="@color/colorPrimary"
            style="@style/StyledTilEditText"
            android:hint="@string/editText_hint_alias"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="true"
    android:layout_marginTop="8dp"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/source_company_name_it"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:layout_marginTop="8dp">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/source_company_name_et"
            android:layout_width="fill_parent"
            android:drawableStart="@drawable/location"
            android:layout_height="wrap_content"
            style="@style/StyledTilEditText"
            android:hint="@string/editText_hint_sourcecompany"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/source_location_it"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:layout_marginTop="8dp">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/source_location_et"
            android:layout_width="fill_parent"
            android:drawableStart="@drawable/location"
            android:layout_height="wrap_content"
            style="@style/StyledTilEditText"
            android:hint="@string/editText_hint_sourcelocation"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>



    <LinearLayout
        android:baselineAligned="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/destination_company_name_it"
        android:layout_width="fill_parent"
        android:drawableStart="@drawable/location"
        android:layout_weight="1"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/destination_company_name_et"
            android:layout_width="fill_parent"
            android:drawableStart="@drawable/location"
            android:layout_height="wrap_content"
            style="@style/StyledTilEditText"
            android:hint="@string/editText_hint_destinationcompany"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/destination_location_it"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:drawableStart="@drawable/location"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.quascenta.petersroad.droidtag.widgets.FormEditText
            android:id="@+id/destination_location_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:hapticFeedbackEnabled="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            style="@style/StyledTilEditText"
            android:hint="@string/editText_hint_destinationlocation"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
    </LinearLayout>